Fix margins on chunked topic content
- Chunked-to-content `nested0` topics inherit 1-em top margin from default `commonltr.css`
- Changes in #103 increase scroll-margin-top which makes this extra margin visible
- This commit removes the extra top margin so ToC links to chunked topic titles scroll to same location as others
- Move top margin to the `nested1` topic chunks

--- a/css/side-toc.css
+++ b/css/side-toc.css
@@ -91,6 +91,14 @@
   }
 }
 
+.nested0 {
+  margin-top: 0
+}
+
+.nested1 {
+  margin-top: 1em
+}
+
 .nested0,
 article h1 {
   scroll-margin-top: 7.25rem;
